<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.fragmentVolumen"
    android:background="@color/screen"
    android:orientation="vertical"
    android:padding="20sp">

    <LinearLayout
        android:id="@+id/titleNumeroMáximo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/numMaximo"
        android:layout_marginBottom="10sp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/combustible_consumido"
            android:textColor="@color/colorDatos"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearEficienciaE"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10sp"
        android:orientation="horizontal">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <EditText
                android:id="@+id/editEficienciaE"
                style="@style/editText"
                android:paddingStart="10sp"
                android:layout_width="match_parent"
                android:layout_height="40sp"
                android:inputType="numberDecimal"
                android:background="@drawable/edittext_borde"
                android:theme="@style/EditTextTheme" />

            <TextView
                android:id="@+id/fixedTextEficienciaE"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingEnd="10sp"
                android:layout_gravity="end|center_vertical"
                android:gravity="center"
                android:text="@string/litros"
                android:textColor="@color/colorDatos"
                />
        </FrameLayout>

        <ImageView
            android:id="@+id/settingsEficienciaE"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:src="@drawable/baseline_settings_24"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/titleDistancia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/numMaximo"
        android:layout_marginBottom="10sp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/distancia"
            android:textColor="@color/colorDatos"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearDistanciaE"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10sp"
        android:orientation="horizontal">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <EditText
                android:id="@+id/editDistanciaE"
                style="@style/editText"
                android:paddingStart="10sp"
                android:layout_width="match_parent"
                android:layout_height="40sp"
                android:padding="10sp"
                android:inputType="numberDecimal"
                android:background="@drawable/edittext_borde"
                android:theme="@style/EditTextTheme" />

            <TextView
                android:id="@+id/fixedTextDistanciaE"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingEnd="10sp"
                android:layout_gravity="end|center_vertical"
                android:gravity="center"
                android:text="@string/kil_metros"
                android:textColor="@color/colorDatos"
                />

        </FrameLayout>

        <ImageView
            android:id="@+id/settingsDistanciaE"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:src="@drawable/baseline_settings_24"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/titlePrecioE"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/numMaximo"
        android:layout_marginBottom="10sp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/precio_del_combustible"
            android:textColor="@color/colorDatos"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearPrecioE"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10sp"
        android:orientation="horizontal">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <EditText
                android:id="@+id/editPrecioE"
                style="@style/editText"
                android:paddingStart="10sp"
                android:layout_width="match_parent"
                android:layout_height="40sp"
                android:padding="10sp"
                android:inputType="numberDecimal"
                android:background="@drawable/edittext_borde"
                android:theme="@style/EditTextTheme" />

            <TextView
                android:id="@+id/fixedTextPrecioE"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingEnd="10sp"
                android:layout_gravity="end|center_vertical"
                android:gravity="center"
                android:text="@string/por_litro"
                android:textColor="@color/colorDatos"
                />

        </FrameLayout>

        <ImageView
            android:id="@+id/settingsPrecioE"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:layout_gravity="center"
            android:src="@drawable/baseline_settings_24"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/titlePersona"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/numMaximo"
        android:layout_marginBottom="10sp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/n_mero_de_personas"
            android:textColor="@color/colorDatos"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearPersonaE"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10sp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editPersonaE"
            style="@style/editText"
            android:paddingStart="10sp"
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:padding="10sp"
            android:layout_weight="1"
            android:inputType="numberDecimal"
            android:background="@drawable/edittext_borde"
            android:theme="@style/EditTextTheme" />

        <ImageView
            android:id="@+id/settingsPersonasE"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:layout_gravity="center"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/botonCalcularEE"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="20dp"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:background="@drawable/boton_redondo_copiar"
            android:stateListAnimator="@null"
            android:text="@string/calcular"
            android:textColor="@color/white"
            app:backgroundTint="@color/orange" />
    </LinearLayout>




    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10sp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10sp"
            >

            <TextView
                android:id="@+id/calculoLitrosPor100km"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/litros_por_cada_100_km"
                android:textColor="@color/colorDatos" />



        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10sp"
            >

            <TextView
                android:id="@+id/calculoLitrosPor10km"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/litros_por_cada_10_km"
                android:textColor="@color/colorDatos" />



        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10sp">

            <TextView
                android:id="@+id/calculoLitrosPorkm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/litros_por_cada_km"
                android:textColor="@color/colorDatos"
                />



        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10sp"
            >

            <TextView
                android:id="@+id/calculoMillasPorGalonUS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/millas_por_gal_n_us"
                android:textColor="@color/colorDatos" />



        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10sp"
            >

            <TextView
                android:id="@+id/calculoMillasPorGalonUK"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/millas_por_gal_n_uk"
                android:textColor="@color/colorDatos" />



        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10sp"
            >

            <TextView
                android:id="@+id/calculoCostoCombustibleE"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/costo_del_combustible"
                android:textColor="@color/colorDatos" />



        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10sp"
            >

            <TextView
                android:id="@+id/calculoCostoCombustiblePorPersonaE"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/por_persona"
                android:textColor="@color/colorDatos" />



        </LinearLayout>

    </LinearLayout>

    </ScrollView>

</LinearLayout>